--- a/themes/material-flow/source/less/_base.less
+++ b/themes/material-flow/source/less/_base.less
@@ -28,7 +28,7 @@ body {
     min-height: calc(100vh - 50px);
     position: relative;
     background-color: @background-color;
-    background: url(https://cdn.laod.wang/wp-content/uploads/2018/12/bg.png) repeat top left scroll;
+    background: url(images/bg.png) repeat top left scroll;
     &.modal-active {
         overflow: hidden;
 
