--- a/themes/material-flow/layout/_partial/post.ejs
+++ b/themes/material-flow/layout/_partial/post.ejs
@@ -1,4 +1,4 @@
-<article class="post reveal<%= (post.title) ? "" : "no-title" %>">
+<article class="wobble-top post reveal<%= (post.title) ? "" : "no-title" %>">
   <section class="meta">
     <% if (post.title) { %>
     <h2 class="title">
