--- a/themes/material-flow/layout/_partial/side.ejs
+++ b/themes/material-flow/layout/_partial/side.ejs
@@ -1,3 +1,5 @@
-<% (theme.widgets||[]).forEach(function(name){ %>
-  <%- partial('../_widget/'+name) %>
-<% }) %>
+<% if (is_post() == false) { %>
+  <% (theme.widgets||[]).forEach(function(name){ %>
+    <%- partial('../_widget/'+name) %>
+  <% }) %>
+<% } %>
