--- a/themes/material-flow/source/less/_article.less
+++ b/themes/material-flow/source/less/_article.less
@@ -138,7 +138,7 @@
         padding-bottom: @gap/4;
         font-size: 1rem;
         line-height: 1.5rem;
-        background: @qoute-background-color;
+        background: #FFFFFF;
         &.article-tags {
             background: transparent;
         }
