--- a/themes/material-flow/source/style.css
+++ b/themes/material-flow/source/style.css
@@ -1446,7 +1446,7 @@ ul.h-list > li {
   padding-bottom: 5px;
   font-size: 1rem;
   line-height: 1.5rem;
-  background: #f7f7f7;
+  background: #fff;
   word-spacing: 10px;
 }
 .article .tags.article-tags {
