--- a/themes/material-flow/layout/_partial/article.ejs
+++ b/themes/material-flow/layout/_partial/article.ejs
@@ -42,11 +42,9 @@
 		</div>
 		<%} %>
 	</section>
-	<% if (post.comments && config.disqus_shortname){ %>
-	<section id="comments">
-		<div id="disqus_thread"></div>
-	</section>
-	<% } %>
+	<% if (theme.comments && theme.comments.enabled){ %>
+		<%- partial('comments') %>
+	<% } %>	
 </article>
 <script>
 	window.subData = {
