--- a/themes/material-flow/layout/_partial/footer.ejs
+++ b/themes/material-flow/layout/_partial/footer.ejs
@@ -1,18 +1,13 @@
 <footer id="footer" class="clearfix">
-
-	<div class="social-wrapper">
-  	<% if (theme.social) { %>
-      <% theme.social.forEach(function(value, key) {
+  <div class="social-wrapper">
+    <% if (theme.social) { %>
+    <% theme.social.forEach(function(value, key) {
            if (value.url && value.slug) { %>
-        <a href="<%= value.url %>" class="social <%= value.slug %>"
-          target="_blank" rel="external">
-          <span class="icon icon-<%= value.slug %>"></span>
-        </a>
-      <% } }); %>
+    <a href="<%= value.url %>" class="social <%= value.slug %>" target="_blank" rel="external">
+      <span class="icon icon-<%= value.slug %>"></span>
+    </a>
+    <% } }); %>
     <% } %>
   </div>
-  
   <div>Copyright © double</div>
-  
 </footer>
-
