feat: 添加评论功能

--- a/themes/material-flow/layout/_partial/article.ejs
+++ b/themes/material-flow/layout/_partial/article.ejs
@@ -43,7 +43,9 @@
 		<%} %>
 	</section>
 	<% if (theme.comments && theme.comments.enabled){ %>
-		<%- partial('comments') %>
+		<section id="comments">
+			<%- partial('comments') %>
+		</section>
 	<% } %>	
 </article>
 <script>
