--- a/themes/material-flow/layout/_partial/scripts.ejs
+++ b/themes/material-flow/layout/_partial/scripts.ejs
@@ -1,15 +1,19 @@
+<% if (is_post()){ %>
 <% if (theme.comments && theme.comments.enabled){ %>
 <% if (theme.comments && theme.comments.provider == 'livere'){ %>
 <script type="text/javascript">
-  (function (d, s) {
-    var j, e = d.getElementsByTagName(s)[0];
-    if (typeof LivereTower === 'function') { return; }
-    j = d.createElement(s);
-    j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-    j.async = true;
-    e.parentNode.insertBefore(j, e);
-  })(document, 'script');
+  window.onload = function () {
+    (function (d, s) {
+      var j, e = d.getElementsByTagName(s)[0];
+      if (typeof LivereTower === 'function') { return; }
+      j = d.createElement(s);
+      j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+      j.async = true;
+      e.parentNode.insertBefore(j, e);
+    })(document, 'script');
+  }
 </script>
+<% } %>
 <% } %>
 <% } %>
 
