--- a/themes/material-flow/layout/_widget/tagcloud.ejs
+++ b/themes/material-flow/layout/_widget/tagcloud.ejs
@@ -7,7 +7,7 @@
             max_font: 20, 
             color: true, 
             start_color: 'gray', 
-            end_color: 'black'
+            end_color: 'blue'
         }) %>
     </div>
 </div>
